# chatserver

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.h
include/server/: chatserver.h  chatservice.h  friendmodel.h  groupmodel.h  public.h  user.h  usermodel.h
include/server/db/: db.h
include/server/model/: group.h  groupuser.h  offlinemessagemodel.h
include/server/redis/: redis.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/db/: db.cpp
src/server/model/: groupmodel.cpp
src/server/redis/: redis.cpp
test/: test.cpp
